Create new components and Home dashboard section
Update Dashboard page to use new components.
Created StatsCard and StatItem components.
Created AppCard component.
Created AdsCard component.
Created ActivityCard component.
Update Sidebar styles.
Created HomeDashboard section.
Created RequestPageDashboard section.
Created FeatureRequestsDashboard section.
Created UserAvatar to show user info in DashboardHeader.
Created DashboardHeader.
Created DashboardContent component to contain the various dashboard sections.
Created AccountDashboard section base.
Add GeneralSans font classes for different font types.

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,3 +5,14 @@ html{
     color: #272643;
     background-color: #ffffff;
 }
+
+/* Fonts */
+.generalsans-medium{
+    font-family: 'GeneralSans-Medium';
+}
+.generalsans-semibold{
+  font-family: 'GeneralSans-Semibold';
+}
+.generalsans-bold{
+  font-family: 'GeneralSans-Bold';
+}
